--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 
     <body>
         <h1>This is a Header</h1>
+        <p> This is a paragraph</p>
+        <p>This is a second  paragraph</p>
+        <p>This is a third  paragraph</p>
     </body>
 </html>
